# mdr_erl_scenarios

./: .gitmodules  CMakeLists.txt  README.md  mdr_erl_scenarios.rosinstall  package.xml  setup.py
config/: fbm1_perception_sm.yaml
docker/: Dockerfile  config.yaml  docker-compose.yml  robot_example_ros.launch
ros/launch/: fbm1_perception.launch
ros/src/mdr_erl_scenarios/: scenario_states.py
